--- a/hit-me-up/package.json
+++ b/hit-me-up/package.json
@@ -6,6 +6,8 @@
     "@apollo/react-hooks": "^3.0.1",
     "apollo-boost": "^0.4.4",
     "graphql": "^14.5.4",
+    "mobx": "^5.13.0",
+    "mobx-react": "^6.1.3",
     "react": "^16.9.0",
     "react-apollo": "^3.0.1",
     "react-dom": "^16.9.0",
