--- a/hit-me-up/package.json
+++ b/hit-me-up/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@apollo/react-hooks": "^3.0.1",
     "apollo-boost": "^0.4.4",
+    "apollo-link-context": "^1.0.18",
     "graphql": "^14.5.4",
     "jsonwebtoken": "^8.5.1",
     "mobx": "^5.13.0",
