--- a/hit-me-up/package.json
+++ b/hit-me-up/package.json
@@ -8,6 +8,7 @@
     "apollo-link-context": "^1.0.18",
     "graphql": "^14.5.4",
     "jsonwebtoken": "^8.5.1",
+    "jwt-decode": "^2.2.0",
     "mobx": "^5.13.0",
     "mobx-react": "^6.1.3",
     "react": "^16.9.0",
