--- a/hit-me-up/package.json
+++ b/hit-me-up/package.json
@@ -6,6 +6,8 @@
     "@apollo/react-hooks": "^3.0.1",
     "apollo-boost": "^0.4.4",
     "apollo-link-context": "^1.0.18",
+    "apollo-link-ws": "^1.0.19",
+    "apollo-utilities": "^1.3.2",
     "graphql": "^14.5.4",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^2.2.0",
@@ -19,7 +21,8 @@
     "react-scripts": "3.1.1",
     "semantic-ui-css": "^2.4.1",
     "semantic-ui-react": "^0.88.0",
-    "styled-components": "^4.3.2"
+    "styled-components": "^4.3.2",
+    "subscriptions-transport-ws": "^0.9.16"
   },
   "scripts": {
     "start": "react-scripts start",
