--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "apollo-link-ws": "^1.0.19",
     "apollo-server-express": "^2.9.1",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
@@ -23,6 +24,7 @@
     "esm": "^3.2.25",
     "express": "^4.17.1",
     "graphql": "^14.5.4",
+    "graphql-subscriptions": "^1.1.0",
     "graphql-tools": "^4.0.5",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
@@ -30,7 +32,8 @@
     "nodemon": "^1.19.1",
     "parser": "^0.1.4",
     "pg": "^7.12.1",
-    "sequelize": "^5.17.1"
+    "sequelize": "^5.17.1",
+    "subscriptions-transport-ws": "^0.9.16"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
